5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1758_1580.log
== TEST (2019-05-26 20:18:51) 
-- CODE:
v = assay(eval(input("As notas: ")))
n = assay(eval(input("Nomes: ")))


print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = assay(eval(input()))
NameError: name 'assay' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:22:53) 
-- CODE:
v = array(eval(input("As notas: ")))
n = array(eval(input("Nomes: ")))


print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:23:38) 
-- CODE:
v = array(eval(input("As notas: ")))
n = array(eval(input("Nomes: ")))


print([n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:23:58) 
-- CODE:
from numpy import *
v = array(eval(input("As notas: ")))
n = array(eval(input("Nomes: ")))


print([n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 20:24:30) 
-- CODE:
from numpy import *
v = array(eval(input("As notas: ")))
n = array(eval(input("Nomes: ")))


print([n])
-- EXECUTION TIME:
0.332352
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
[array(['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L'],
      dtype='<U1')]
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
[array(['ALICE', 'BENTO', 'CLARA', 'DAVI', 'ELSON', 'FLAVIO', 'GABI',
       'HELOISA', 'IRIS', 'JULIA', 'KARLA'], dtype='<U7')]
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
[array(['CLARA', 'DAVI', 'ELSON', 'ALICE', 'BENTO', 'FLAVIO', 'GABI',
       'HELOISA', 'IRIS', 'JULIA', 'KARLA'], dtype='<U7')]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:24:40) 
-- CODE:
from numpy import *
v = array(eval(input("As notas: ")))
n = array(eval(input("Nomes: ")))


print([n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 20:24:45) 
-- CODE:
from numpy import *
v = array(eval(input("As notas: ")))
n = array(eval(input("Nomes: ")))


print([n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:36:29) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas: ")))
nomes = array(eval(input("Nomes: ")))

i = 0
s = 0
m = 0
n = 0
numerador = 0 
denominador = 0

while(i > size(v)):
	numerador = numerador + 1
	denominador = denominador + 1
	i = i + 1
	s = s + 1 
	m = m + 1 
	n = n + 1
print(soma)
	 
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:38:06) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas: ")))
nomes = array(eval(input("Nomes: ")))

i = 0
s = 0
m = 0
n = 0
numerador = 0 
denominador = 0

while(i > size(nome)):
	numerador = numerador + 1
	denominador = denominador + 1
	i = i + 1
	s = s + 1 
	m = m + 1 
	n = n + 1
print(soma)
	 ,
	
	
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 20
    ,
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:38:22) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas: ")))
nomes = array(eval(input("Nomes: ")))

i = 0
s = 0
m = 0
n = 0
numerador = 0 
denominador = 0

while(i > size(notas)):
	numerador = numerador + 1
	denominador = denominador + 1
	i = i + 1
	s = s + 1 
	m = m + 1 
	n = n + 1
print(soma)
	 ,
	
	
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 20
    ,
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:38:33) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas: ")))
nomes = array(eval(input("Nomes: ")))

i = 0
s = 0
m = 0
n = 0
numerador = 0 
denominador = 0

while(i > size(notas)):
	numerador = numerador + 1
	denominador = denominador + 1
	i = i + 1
	s = s + 1 
	m = m + 1 
	n = n + 1
print(soma)
	 
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:39:07) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas: ")))
nomes = array(eval(input("Nomes: ")))

i = 0
s = 0
m = 0
n = 0
numerador = 0 
denominador = 0

while(i > size(notas)):
	numerador = numerador + 1
	denominador = denominador + 1
	i = i + 1
	s = s + 1 
	m = m + 1 
	n = n + 1
print(soma)
	 
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:43) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas: ")))
nomes = array(eval(input("Nomes: ")))

i = 0
s = 0
m = 0
n = 0
numerador = 0 
denominador = 0

while(i > size(notas)):
	numerador = numerador + 1
	denominador = denominador + 1
	i = i + 1
	s = s + 1 
	m = m + 1 
	n = n + 1
print(sum[notas])
	 
	
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:43) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram

while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
	i = i + 1
m = sum[notas]/ size[notas]
print(m)

	
	
	numerador = numerador + 1
	denominador = denominador + 1
	i = i + 1
	s = s + 1 
	m = m + 1 
	n = n + 1
	
print(sum[notas])
	 
	
	
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 23
    numerador = numerador + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:56) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram

while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
	i = i + 1
m = sum[notas]/ size[notas]
print(m)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:58:08) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram

while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
	i = i + 1
m = sum(notas)/ size(notas)
print(m)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:59:50) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram

while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
	i = i + 1

print(sf)
print(sa)
print(sr)
m = sum(notas)/ size(notas)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:00:20) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram

while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
	i = i + 1

print(sf)
print(sa)
print(sr)
m = sum(notas)/ size(notas)
print(round(m,2))
print(max(nomes))
	
	
	
-- EXECUTION TIME:
0.522777
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
3.5
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
1.0
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:00:26) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram

while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
	i = i + 1

print(sf)
print(sa)
print(sr)
m = sum(notas)/ size(notas)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:19) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram

while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
	i = i + 1

print(sf)
print(sa)
print(sr)
m = sum(notas)/ size(notas)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:22) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram

while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
	i = i + 1

print(sf)
print(sa)
print(sr)
m = sum(notas)/ size(notas)
print(round(m,2))
print(max(nomes))
	
	
	
-- EXECUTION TIME:
0.457823
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
3.5
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
1.0
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:41) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram

while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
	i = i + 1

print(sf)
print(sa)
print(sr)
m = sum(notas)/ size(notas)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:09:58) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / size(x) - sf
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:10:32) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(x) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:11:26) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:11:53) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- EXECUTION TIME:
0.367025
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:09) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:33) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:18:57) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:19:51) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- EXECUTION TIME:
0.458994
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:19:57) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:20:26) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:22:32) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
maior= -1
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:22:59) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
maior= -1
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- EXECUTION TIME:
0.451428
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:23:05) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
maior= -1
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:23:49) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
maior= -1
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- EXECUTION TIME:
0.36481
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
L
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
KARLA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
KARLA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:23:55) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
maior= -1
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:08) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
maior= -1
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(maior)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:36) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
maior= -1
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:44) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
maior= -1
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(max(nomes))
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:39) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
maior= -1
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(nomes[maior])
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:26:00) 
-- CODE:
from numpy import *
notas = array(eval(input("As notas, nigga: ")))
nomes = array(eval(input("Nomes, nigga: ")))

i = 0
sa = 0 #aprovados
sr = 0 #reprovados
sf = 0 #faltaram
x = 0
maior= -1
while(i < size(notas)):
	if(notas[i]==-1):
		sf = sf + 1
	elif(notas[i]>= 6):
		sa = sa + 1
		x = x + notas[i] 
	elif(notas[i]>= -1 and notas[i] < 6):
		sr = sr + 1
		x = x + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1

print(sf)
print(sa)
print(sr)
m = x / (size(notas) - sf)
print(round(m,2))
print(nomes[maior])
	
	
	
-- EXECUTION TIME:
0.523531
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
